Always show filterbar in wicegrid and fix wrap issue

--- a/app/assets/stylesheets/components/grid.sass
+++ b/app/assets/stylesheets/components/grid.sass
@@ -5,6 +5,9 @@ $select-width: 28px
 .wice-grid.table
   margin-bottom: 0
 
+  td
+    white-space: nowrap
+
   .fa
     color: $brand-blue-tertiary
 
